@@ -1,6 +1,10 @@
 FlightPath 5.x Changelog
 ========================
 
+2016-06-13
+  Made alterations to fix a bug where the group a course was substituted into was not being reported correctly.
+  
+
 2016-05-25
   Converted the process that runs all group definitions for a year to a Batch API process, for better memory management and UI.
   
